--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,11 @@
    Author's custom styles
    ========================================================================== */
 
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+.fb-comments, .fb-comments iframe[style] {width: 100% !important;}
 
 
 
