with time-lapse and rob comment

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
   padding-bottom: 40px;
 }
 .fb-comments, .fb-comments iframe[style] {width: 100% !important;}
-
+.fb-comments, .fb-comments span {width: 100% !important;}
 
 
 
